syntax = "proto3";

package pcbook;

import "google/api/annotations.proto";

option go_package = "github.com/JeongWoo-Seo/pcBook/pb";

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string access_token = 1;
}

service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post : "/auth/login"
            body : "*"
        };
    };
}